<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicapp.ScreenFourActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Videos"
        android:id="@+id/textView21"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <VideoView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:src="@drawable/main"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Play"
        android:layout_marginTop="5dp"
        android:id="@+id/button5"
        android:layout_below="@+id/imageView"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/song1"
        android:id="@+id/textView22"
        android:layout_alignTop="@+id/button5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="play"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="play"
        android:id="@+id/button7"
        android:layout_below="@+id/button6"
        android:layout_toRightOf="@+id/textView21"
        android:layout_toEndOf="@+id/textView21" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/song2"
        android:layout_marginTop="10dp"
        android:id="@+id/textView23"
        android:layout_below="@+id/button5"
        android:layout_alignRight="@+id/textView22"
        android:layout_alignEnd="@+id/textView22" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/song6"
        android:layout_marginTop="10dp"
        android:id="@+id/textView24"
        android:layout_alignTop="@+id/button7"
        android:layout_alignRight="@+id/textView23"
        android:layout_alignEnd="@+id/textView23" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="main"
        android:id="@+id/main4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
